# npy_array

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE.bazel
npy_array/: compile_time_loop.h  data_type.cpp  data_type.h  dynamic_array.cpp  dynamic_array.h  dynamic_array_test.cpp  gtest_half.h  half.h  npy_array.h  npy_dynamic_array.cpp  npy_dynamic_array.h  status_macros.h  zip_reader.cpp  zip_reader.h  zip_roundtrip_test.cpp  zip_writer.cpp  zip_writer.h  zlib_compressor.cpp  zlib_compressor.h  zlib_compressor_test.cpp
tests/: npy_dynamic_array_test.cpp
tests/data/: generate_npz.py  npy_dynamic_array_testdata.npz
