load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# https://github.com/dsharlet/array
http_archive(
    name = "com_github_dsharlet_array",
    sha256 = "e2ce5b2271734e0de85a51750bd85a9121bb5a7a6a5881f6b6a0c2f0d366057c",
    strip_prefix = "array-4b684ec1047a63f30d6e2b919b9abefda1496386",
    urls = [
        "https://github.com/dsharlet/array/archive/4b684ec1047a63f30d6e2b919b9abefda1496386.zip",
    ],
)

# abseil-cpp depends on bazel_skylib.
http_archive(
    name = "bazel_skylib",
    sha256 = "b8a1527901774180afc798aeb28c4634bdccf19c4d98e7bdd1ce79d1fe9aaad7",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.4.1/bazel-skylib-1.4.1.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.4.1/bazel-skylib-1.4.1.tar.gz",
    ],
)

http_archive(
    name = "com_google_absl",
    sha256 = "f50e5ac311a81382da7fa75b97310e4b9006474f9560ac46f54a9967f07d4ae3",
    strip_prefix = "abseil-cpp-20240722.0",
    urls = ["https://github.com/abseil/abseil-cpp/releases/download/20240722.0/abseil-cpp-20240722.0.tar.gz"],
)

# gtest.
http_archive(
    name = "com_google_googletest",
    sha256 = "1f357c27ca988c3f7c6b4bf68a9395005ac6761f034046e9dde0896e3aba00e4",
    strip_prefix = "googletest-1.14.0",
    urls = [
        "https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip",
    ],
)

# zlib-ng.
http_archive(
    name = "zlib-ng",
    build_file = "//third_party/zlib-ng:zlib-ng.BUILD",
    sha256 = "a73343c3093e5cdc50d9377997c3815b878fd110bf6511c2c7759f2afb90f5a3",
    strip_prefix = "zlib-ng-2.2.4",
    urls = [
        "https://github.com/zlib-ng/zlib-ng/archive/refs/tags/2.2.4.tar.gz",
    ],
)

# minizip-ng.
http_archive(
    name = "minizip-ng",
    build_file = "//third_party/minizip-ng:minizip-ng.BUILD",
    sha256 = "c362e35ee973fa7be58cc5e38a4a6c23cc8f7e652555daf4f115a9eb2d3a6be7",
    strip_prefix = "minizip-ng-4.0.10",
    urls = [
        "https://github.com/zlib-ng/minizip-ng/archive/refs/tags/4.0.10.tar.gz",
    ],
)
